# cookiecutter-python-package

./: README.md  cookiecutter.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-issue.md
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml  pythonpackage.yml
{{cookiecutter.project_slug}}/tests/: test_version.py  test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  {{cookiecutter.pkg_name}}.py
