[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.pkg_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "{{cookiecutter.project_github_url}}"
"Bug Tracker" = "{{cookiecutter.project_github_url}}/issues"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.pkg_name}}"]

[tool.hatch.envs.default]
dependencies = [
    "ruff>=0.2.2",
    "pre-commit>=3.6.2",
    "pytest>=8.0.1",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.4.2",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocs-material>=9.6.1",
]
