[project]
name = "{{cookiecutter.pkg_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
[project.urls]
"Homepage" = "{{cookiecutter.project_github_url}}"
"Bug Tracker" = "{{cookiecutter.project_github_url}}/issues"


[dependency-groups]
dev = [
    "coverage>=7.7.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings>=0.29.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.0",
]
